--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,8 @@
               "node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
               "node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
               "node_modules/animate.css/animate.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/assets/fonts.css"
             ],
             "scripts": [
               "node_modules/chart.js/dist/Chart.js",
@@ -109,7 +110,8 @@
               "node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
               "node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
               "node_modules/animate.css/animate.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/assets/fonts.css"
             ],
             "scripts": [
               "node_modules/chart.js/dist/Chart.js",
